# hjeon139-mcp-outofcontext

./: .cursorignore  .cursorrules  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cursor/rules/: code-quality.mdc  commit-standards.mdc  context-management.mdc
.out_of_context/contexts/: action-items-day3.mdc  context-management.mdc  current-status.mdc  decision-database-chromadb.mdc  decision-log.mdc  design-revision-learning.mdc  history-action-items-original.mdc  history-decisions-phase0.mdc  key-documents-index.mdc  persona-definitions.mdc  project-overview.mdc  requirements-revision-changelog.mdc
docs/: code_quality_standards.md  demo.md  development.md  installation.md  usage.md
docs/api/: models.md  tools.md
docs/steering/: 00_quick_start.md  06_conventional_commits.md  07_semantic_versioning.md  08_commit_version_workflow.md  README.md  SUMMARY.md
docs/v0/: idea_summary.md  requirements.md
docs/v0/research/: agent_context_awareness.md  attention_pruning_transformer_patterns.md  context_summarization_compression.md  core_architecture.md  garbage_collection_patterns.md  (+4 more)
out_of_context/contexts/: action-items-day3.mdc  current-status.mdc  decision-database-chromadb.mdc  decision-storage-directory-migration.mdc  design-revision-learning.mdc  history-action-items-original.mdc  history-decisions-phase0.mdc  project-overview.mdc  requirements-revision-changelog.mdc  review-storage-migration-bugfix.mdc
src/hjeon139_mcp_outofcontext/: __init__.py  analysis_engine.py  app_state.py  config.py  context_manager.py  fastmcp_server.py  gc_engine.py  i_storage_layer.py  inverted_index.py  lru_segment_cache.py  main.py  models.py  monitoring_tools.py  server.py  storage.py  tokenizer.py  tool_registry.py
src/out_of_context/: __init__.py  app_state.py  server.py  tool_registry.py
tests/: conftest.py  test_analysis_engine.py  test_config.py  test_context_manager.py  test_crud_tools.py  test_fastmcp_tools.py  test_gc_engine.py  test_integration.py  test_main.py  test_models.py  test_monitoring_tools.py  test_performance.py  test_pruning_tools.py  test_server.py  test_server_schema.py  test_smoke.py  test_stashing_tools.py  test_storage.py  test_task_management_tools.py  test_token_limit_verification.py  test_tokenizer.py  test_tool_registry.py
tests/integration/: test_all_features.py  test_mcp_protocol.py
(+169 files in other folders)
