[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "out-of-context"
version = "0.1.0"
description = "Out of context project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "your@email.com" },
]
license = { text = "MIT" }
dependencies = [
  # Core runtime dependencies
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
type = "virtual"
dependencies = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint-fix = "ruff check --fix ."
fmt-fix = "ruff format ."
typecheck = "mypy src"
update-deps = "python -m pip install -e '.[dev]'"
release = [
  "lint-fix",
  "fmt-fix",
  "typecheck",
  "pytest -m 'unit' --cov=src/out_of_context",
  "hatch build -t wheel",
]

[tool.hatch.envs.test]
type = "virtual"
features = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/out_of_context"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (errors)
  "F",    # pyflakes
  "W",    # pycodestyle (warnings)
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "I",    # isort
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E203", # whitespace before ':', conflicts with common formatter styles
  "E501", # line length handled by formatter; keep checks lightweight
]

[tool.ruff.lint.isort]
known-first-party = ["out_of_context"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
pretty = true

modules = ["out_of_context"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
  "unit: fast unit tests for core logic",
  "integration: slower or integration tests",
  "experiment: research experiments (if applicable)",
]

